fixing search results, not showing pages correctly

--- a/wp-content/themes/_design/_src/screen.scss
+++ b/wp-content/themes/_design/_src/screen.scss
@@ -880,7 +880,7 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
 	}
 }
 
-.post {
+.post, .page {
 	@include pie-clearfix;
 	margin: 0 0 30px 0;
 	p {
